--- a/packages/features/package.json
+++ b/packages/features/package.json
@@ -26,17 +26,21 @@
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
+    "@mint-up/ui": "workspace:*",
     "next-themes": "catalog:",
     "tailwindcss": "catalog:"
   },
   "devDependencies": {
+    "@mint-up/convex": "workspace:*",
     "@mint-up/eslint-config": "workspace:*",
     "@mint-up/prettier-config": "workspace:*",
     "@mint-up/tailwind-config": "workspace:*",
     "@mint-up/tsconfig": "workspace:*",
     "@types/react": "catalog:react19",
     "@types/react-dom": "catalog:react19",
+    "effect": "3.19.14",
     "eslint": "catalog:",
+    "lucide-react": "0.562.0",
     "next": "16.1.3",
     "next-intl": "^4.7.0",
     "prettier": "catalog:",
