--- a/packages/features/tsconfig.json
+++ b/packages/features/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@mint-up/tsconfig/compiled-package.json",
   "compilerOptions": {
     "jsx": "react-jsx",
+    "lib": ["ES2022", "DOM"],
     "paths": {
       "@/app/*": ["./src/app/*"],
       "@/pages/*": ["./src/pages/*"],
